# crime-data-analysis

./: .gitignore  CMakeLists.txt  DataConfig.h.in  LICENSE  README.md  debug_tests.sh  main.cpp
.github/: cmakeWorkflow.yml
.github/workflows/: cmake-multi-platform.yml
CrimeIncidents/: CMakeLists.txt  CSVDataLoader.cpp  CSVDataLoader.h
CrimeIncidents/include/: CrimeDataAnalyzer.h  crime_analyzer.h
CrimeIncidents/src/: CrimeDataAnalyzer.cpp  CrimeIncidents.cpp  crime_analyzer.cpp
CrimeIncidents/test/: CMakeLists.txt  CrimeDataAnalyzerTests.cpp  CrimeIncidentTests.cpp
DataCenter/: CMakeLists.txt
DataCenter/include/: Data.h  DataConfig.h
DataCenter/src/: Data.cpp
DataCenter/test/: CMakeLists.txt  DataTests.cpp
DataParser/: CMakeLists.txt
DataParser/include/: AbstractDataFetcher.h  CSVDataLoader.h  DataLoaderFactory.h  DataLoaderInterface.h  JsonDataLoader.h
DataParser/src/: AbstractDataFetcher.cpp  CSVDataLoader.cpp  DataLoaderFactory.cpp  JsonDataLoader.cpp
DataParser/test/: AbstractDataFetcherTests.cpp  CMakeLists.txt  CSVDataLoaderTests.cpp  DataLoaderFactoryTests.cpp  JsonDataLoaderTests.cpp  MockAbstractDataFetcher.h
DataSource/: CMakeLists.txt
DataSource/include/: IDataFetcher.h  LocalFileDataLoader.h  RequestHandler.h  URLDataLoader.h
DataSource/src/: LocalFileDataLoader.cpp  RequestHandler.cpp  URLDataLoader.cpp
DataSource/test/: CMakeLists.txt  LocalFileDataLoaderTests.cpp  MockDataFetcher.h  RequestHandlerTests.cpp  URLDataLoaderTests.cpp
include/: CrimeDataAnalysis.h  CrimeIncidents.h  Data.h
resources/: Crime_Incidents_in_the_Last_30_Days.csv  Crime_Incidents_in_the_Last_30_Days.geojson  partialCrash_data.json
src/: CrimeDataAnalysis.cpp
test/: CMakeLists.txt  CrimeDataAnalysis_tests.cpp  CrimeIncidentsTests.cpp
utils/: CMakeLists.txt
utils/include/: Utils.h
utils/src/: Utils.cpp
utils/test/: CMakeLists.txt  UtilsTests.cpp
